# movie-ticket-clean-arch

./: .gitignore  README.md  conftest.py  database.py  main.py  pyproject.toml  rabbitmq.py  requirements.txt  settings.py
apps/room/entities/: room.py  seat.py
apps/room/entities/tests/: test_room.py  test_seat.py
apps/room/interfaces/: interfaces.py
apps/room/models/: room.py
apps/room/persistence/: persistence.py
apps/room/persistence/tests/: test_persistence.py
apps/room/routers/: routers.py  schemas.py
apps/room/routers/tests/: test_router.py
apps/room/services/: service.py
migrations/: env.py
migrations/versions/: 08862d618a90_set_user_seat_init_false.py  0bc212c97efb_fix_seats_relations_and_movie_property.py  1afcd93f2568_add_unique_constraint_to_seat.py  25accbb230f8_recreate_tables_after_metadata_fix.py  4a173d6f8b7d_create_rooms_and_seats_tables.py  59f52a459429_set_user_init_false.py  af1a1b5ab618_create_users_table.py  c2cbe6024520_create_seat_to_user_relationship.py  f2d838310edb_change_metadata.py
