[project]
name = "movie-ticket-clean-arch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.1",
    "pydantic-settings>=2.14.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I","F","E","W","PL","PT"]

[tool.ruff.format]
preview = true
quote-style = "double"
